# simple-pypackage

./: Makefile  README.md  pyproject.toml
requirements/: base.txt  dev.txt
